Mini Cart; Start of new customization options

--- a/src/app/browse/workbooks/less/workbooks.less
+++ b/src/app/browse/workbooks/less/workbooks.less
@@ -46,3 +46,18 @@
 .dropbox-blue {
   color: @dropbox-blue;
 }
+
+.panel-accordion .panel-heading
+{
+  padding: 0;
+}
+
+.panel-accordion .panel-heading a
+{
+  display: block;
+  padding: 10px 15px;
+}
+
+.panel-accordion .panel-heading a {
+  text-decoration: none;
+}
