--- a/src/app/base/templates/base.top.tpl.html
+++ b/src/app/base/templates/base.top.tpl.html
@@ -6,6 +6,7 @@
         <!--<a href="" ui-sref="home"><ordercloud-logo data-width="60px" data-height="50px" data-color="#333" data-icon="true"></ordercloud-logo></a>-->
         <img width="77px" height="50px" src="assets/fedex-office-logo.png" />
     </div>
+    <ordercloud-minicart order="base.currentOrder" class="pull-right"></ordercloud-minicart>
     <div class="link" uib-dropdown>
         <a href uib-dropdown-toggle>
             <i class="fa fa-user"></i>
