Final work for the night

--- a/src/app/home/templates/home.tpl.html
+++ b/src/app/home/templates/home.tpl.html
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="col-xs-6 col-md-3" ng-repeat="category in home.categories.Items" ng-if="category.ID == 'print'">
 			<div class="thumbnail" ng-click="home.goToCategory(category)">
-				<img style="min-height: 300px;" ng-src="{{category.xp.image.URL || 'http://placehold.it/300x300'}}">
+				<img class="img-responsive" style="min-height: 300px;" ng-src="{{category.xp.image.URL || 'http://placehold.it/300x300'}}">
 				<div class="caption text-center">
 					<h3>{{category.Name}}</h3>
 					<small>{{category.Description}}</small>
@@ -14,7 +14,7 @@
 		</div>
 		<div class="col-xs-6 col-md-3" ng-repeat="category in home.categories.Items" ng-if="category.ID != 'print'">
 			<div class="thumbnail" ng-click="home.goToCategory(category)">
-				<img style="min-height: 300px;" ng-src="{{category.xp.image.URL || 'http://placehold.it/300x300'}}">
+				<img class="img-responsive" style="min-height: 300px;" ng-src="{{category.xp.image.URL || 'http://placehold.it/300x300'}}">
 				<div class="caption text-center">
 					<h3>{{category.Name}}</h3>
 					<small>{{category.Description}}</small>
