--- a/src/app/browse/workbooks/templates/workbooks.workbook.tpl.html
+++ b/src/app/browse/workbooks/templates/workbooks.workbook.tpl.html
@@ -23,12 +23,12 @@
     </div>
     <div class="row">
         <div class="col-sm-8">
-            <iframe ng-if="workbooksDocument.product.xp.document.URL" class="doc-preview" src="{{workbooksDocument.productPreviewUrl}}"></iframe>
+            <iframe id="docframe" ng-if="workbooksDocument.product.xp.document.URL" class="doc-preview" src="{{workbooksDocument.productPreviewUrl}}"></iframe>
         </div>
         <div class="col-sm-4">
             <form name="workbooksform" ng-submit="workbooksDocument.submit()">
-                <uib-accordion>
-                    <uib-accordion-group class="panel-accordion">
+                <uib-accordion close-others="false">
+                    <uib-accordion-group class="panel-accordion" is-open="workbooksDocument.paper">
                         <uib-accordion-heading>
                             Print Color
                         </uib-accordion-heading>
@@ -36,12 +36,24 @@
                             <select class="form-control" ng-model="workbooksDocument.customizationOptions.PrintColor" ng-options="color as color for color in workbooksDocument.printColors" ng-required="false"></select>
                         </div>
                     </uib-accordion-group>
-                    <uib-accordion-group class="panel-accordion">
+                    <uib-accordion-group class="panel-accordion" is-open="workbooksDocument.paper">
                         <uib-accordion-heading>
                             Paper Selection
                         </uib-accordion-heading>
                         <div class="form-group">
                             <select class="form-control" ng-model="workbooksDocument.customizationOptions.PaperSelection" ng-options="paper as paper for paper in workbooksDocument.paperOptions" ng-required="false"></select>
+                        </div>
+                        <div class="form-group" ng-if="workbooksDocument.customizationOptions.PrintColor == 'Black'">
+                            <label>Paper Color</label>
+                            <select class="form-control" ng-model="workbookDocument.customizationOptions.ColorPaper" ng-options="colorPaper as colorPaper for colorPaper in workbooksDocument.colorPaperOptions"></select>
+                        </div>
+                    </uib-accordion-group>
+                    <uib-accordion-group class="panel-accordion">
+                        <uib-accordion-heading>
+                            Single or Double Sided
+                        </uib-accordion-heading>
+                        <div class="form-group">
+                            <select class="form-control"  ng-model="workbookDocument.customizationOptions.SideCount" ng-options="sideCount for sideCount in workbooksDocument.sides" ng-required="false"></select>
                         </div>
                     </uib-accordion-group>
                     <uib-accordion-group class="panel-accordion">
@@ -82,24 +94,6 @@
                             <p>Tabs are unavailable if you have selected Stapling.</p>
                             <p>Tabs are available only if Binding of 3-Hole Punching is selected.</p>
                         </div>
-                    </uib-accordion-group>
-                    <uib-accordion-group class="panel-accordion">
-                        <uib-accordion-heading>
-                            Title
-                        </uib-accordion-heading>
-
-                    </uib-accordion-group>
-                    <uib-accordion-group class="panel-accordion">
-                        <uib-accordion-heading>
-                            Title
-                        </uib-accordion-heading>
-
-                    </uib-accordion-group>
-                    <uib-accordion-group class="panel-accordion">
-                        <uib-accordion-heading>
-                            Title
-                        </uib-accordion-heading>
-
                     </uib-accordion-group>
                 </uib-accordion>
                 <!--<div class="panel panel-default">
