--- a/src/app/checkoutFE/templates/checkout.delivery.tpl.html
+++ b/src/app/checkoutFE/templates/checkout.delivery.tpl.html
@@ -21,7 +21,7 @@
             <a href="#" class="bs-wizard-dot"></a>
         </div>
     </div>
-    <article class="container-fluid" id="delivery">
+    <article class="container" id="delivery">
         <div class="col-sm-8">
             <div class="row">
                 <div class="col-sm-8 col-sm-offset-4">
