--- a/src/app/checkoutFE/templates/checkout.payment.tpl.html
+++ b/src/app/checkoutFE/templates/checkout.payment.tpl.html
@@ -21,10 +21,10 @@
             <a href="#" class="bs-wizard-dot"></a>
         </div>
     </div>
-    <article class="container-fluid" id="delivery">
+    <article class="container" id="delivery">
         <div class="col-sm-8">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-10">
                     <div class="row">
                         <div class="panel-heading"><b>Payment</b></div>
                         <div class="panel-body">
