--- a/src/app/cart/templates/cart.tpl.html
+++ b/src/app/cart/templates/cart.tpl.html
@@ -34,8 +34,7 @@
             <table class="table table-hover">
                 <colgroup>
                     <col style="width:10%;">
-                    <col style="width:55%;">
-                    <col style="width:10%">
+                    <col style="width:65%;">
                     <col style="width:10%">
                     <col style="width:10%">
                     <col style="width:5%">
@@ -45,7 +44,6 @@
                         <th></th>
                         <th></th>
                         <th class="text-center">Quantity</th>
-                        <th class="text-center">Unit Price</th>
                         <th class="text-center">Price</th>
                         <th class="text-center"></th>
                     </tr>
@@ -69,10 +67,7 @@
                             </form>
                         </td>
                         <td class="text-center">
-                            <small class="text-success">{{lineItem.LineTotal | currency}}</small>
-                        </td>
-                        <td class="text-center">
-                            <small class="text-success">{{lineItem.LineTotal | currency}}</small>
+                            <small class="text-success">{{lineItem.LineTotal + lineItem.Markup | currency}}</small>
                         </td>
                         <td>
                             <div class="btn-group-vertical" style="float: right;">
@@ -90,7 +85,7 @@
         </div>
         <div class="panel-footer">
             <p class="lead">
-                <span class="pull-right">Estimated Price: <span class="text-success">{{cart.order.Subtotal | currency}}</span></span>
+                <span class="pull-right">Estimated Price: <span class="text-success">{{cart.order.Subtotal + cart.order.Markup | currency}}</span></span>
                 <br>
                 <span class="pull-right subtotal-subtext">Document and product prices displayed are estimated</span>
                 <br>
