--- a/src/app/checkout/templates/checkout.lineitems.tpl.html
+++ b/src/app/checkout/templates/checkout.lineitems.tpl.html
@@ -54,9 +54,9 @@
     </div>
     <div class="panel-footer">
         <p>
-            <p>Subtotal: <span class="text-success pull-right">{{order.Subtotal | currency}}</span></p>
+            <p>Subtotal: <span class="text-success pull-right">{{order.Subtotal + order.Markup | currency}}</span></p>
             <p>Estimated Delivery: <span class="text-success pull-right">{{(order.xp.ShippingCost || 0) | currency}}</span></p>
-            <p>Total: <span class="text-success pull-right">{{(order.Subtotal + (order.xp.ShippingCost || 0)) | currency}}</span></p>
+            <p>Total: <span class="text-success pull-right">{{(order.Subtotal + (order.xp.ShippingCost || 0) +  + order.Markup) | currency}}</span></p>
         </p>
     </div>
 </div>
